# yd-gui

./: Cargo.toml  Dioxus.toml
migrations/: 001_initial.sql
src/: database.rs  lib.rs  video.rs
