[package]
name = "yd-gui"
version = "0.1.0"
authors = ["Jason Ly <81354745+jasonly027@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "sqlite", "migrate"] }
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0.60"
anyhow = "1.0.84"
const_format = "0.2.32"
